--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
   "window":{
     "backgroundTextStyle":"dark",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "仿网易严选",
+    "navigationBarTitleText": "小程序商城DEMO",
     "navigationBarTextStyle":"black",
     "enablePullDownRefresh": "true"
   },
