实现立刻购买的功能；规格数量选择窗口增加返回按钮；优惠券页面的兑换号清除功能，以及去掉演示内容

--- a/app.json
+++ b/app.json
@@ -30,13 +30,14 @@
     "pages/shopping/checkout/checkout",
     "pages/shopping/address/address",
     "pages/shopping/addressAdd/addressAdd",
+    "pages/shopping/buyNow/buyNow",
     "pages/goods/goods",
     "pages/topicDetail/topicDetail"
   ],
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "华侨城小程序DEMO",
+    "navigationBarTitleText": "甘坑小镇",
     "navigationBarTextStyle":"black",
     "enablePullDownRefresh": true
   },
